# crypto

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.py
.github/workflows/: build-and-test.yml  linux.yml
cmake/: config.cmake
source/: CMakeLists.txt
source/crypto/: CMakeLists.txt  c_integer.cpp  integer.h  integer.impl.h  main.cpp
source/test/unittests/: CMakeLists.txt  c_integer.test.cpp  test.cpp
tools/: build-deps.py  gen-cmake.py  gen-vs.py
tools/vs/: sln.in  vcxproj.in
